exploring threejs - global commit 6 - placed model and fixed clipping image planes

--- a/three-js-tutorial/styles/globals.scss
+++ b/three-js-tutorial/styles/globals.scss
@@ -54,3 +54,8 @@ body {
 #point:hover {
   cursor: pointer;
 }
+
+.c {
+  background: url('/images/whitepaper.jpg') no-repeat center center;
+  background-size: cover;
+}
